add SMA proposal

--- a/cv_science.tex
+++ b/cv_science.tex
@@ -282,31 +282,36 @@ Long Beach, CA \hfill {\em January 2013}
 %	OBSERVING TIME SECTION
 %----------------------------------------------------------------------------------------
 
-\begin{rSection}{Accepted Proposals, Telescope Time}
+\begin{rSection}{Accepted Proposals as PI}
+
+\begin{rSubsection}{SMA}{}{}{}
+\item ``A New Frontier in Cosmic Explosions''\\
+  8 tracks at priority B \hfill {\em 2018B}
+\end{rSubsection}
 
 \begin{rSubsection}{ALMA}{}{}{}
-\item PI: ``AT2018cow: the poster-child relativistic explosion \\
+\item ``AT2018cow: the poster-child relativistic explosion \\
   for high-frequency time-domain astronomy'' \\
   2.6 hours at highest priority \hfill {\em June 2018}
 \end{rSubsection}
 
 \begin{rSubsection}{SMA}{}{}{}
-\item PI: ``SMA Monitoring of the Rare Relativistic Supernova AT2018cow'' \\
+\item ``SMA Monitoring of the Rare Relativistic Supernova AT2018cow'' \\
   80 hours \hfill {\em June 2018}
 \end{rSubsection}
 
 \begin{rSubsection}{VLBA}{}{}{}
-\item PI: ``Confirmation of superluminal motion for \\
+\item ``Confirmation of superluminal motion for \\
   rare relativistic supernova AT2018cow''\\
   12 hours at Priority A \hfill {\em June 2018}
 \end{rSubsection}
 
 \begin{rSubsection}{EVLA}{}{}{}
-\item PI: ``MAXI 170808A, A Short Soft X-ray Transient'' \\
+\item ``MAXI 170808A, A Short Soft X-ray Transient'' \\
   3 hours of DDT time at Priority C \hfill {\em August 2017}
-\item PI: ``A Short Soft Transient from MAXI: Detection of a Dirty Fireball?'' \\
+\item ``A Short Soft Transient from MAXI: Detection of a Dirty Fireball?'' \\
   3 hours of DDT time at Priority C \hfill {\em May 2017}
-\item PI: ``Monitoring the Pulsed and Continuum Fluxes of Eclipsing Binary Pulsar Terzan 5A" \\
+\item ``Monitoring the Pulsed and Continuum Fluxes of Eclipsing Binary Pulsar Terzan 5A" \\
 4 hours Priority B \hfill {\em February 2014}
 \end{rSubsection}
 
