separate invited and contributed talks

--- a/cv_science.tex
+++ b/cv_science.tex
@@ -99,7 +99,25 @@ First Place, Dewitt Wallace Prize for Science Writing for the Public, MIT \hfill
 %	INVITED AND CONTRIBUTED TALKS
 %------------------------------------------------------------------------------
 
-\begin{rSection}{Invited and Contributed Talks}
+\begin{rSection}{Invited Talks}
+
+\begin{itemize}
+  \item
+    ``The Death Throes of a Stripped Massive Star'': Brown Bag Lunch, MIT, Cambridge, MA
+    \hfill {\em April 2019}
+  \item
+  ``Watching The Cow Shock Its Environment: The Millimeter-Wavelength Perspective'':
+    Press Panel at the AAS Winter Meeting, Seattle, WA
+    \hfill {\em January 2019}
+  \item
+``\emph{The Cannon:} Data-Driven Spectral Modeling in the Era of Large Stellar Surveys'':
+  Gemini Observatory Workshop, La Serena, Chile \hfill {\em March 2016}
+\end{itemize}
+
+\end{rSection}
+
+
+\begin{rSection}{Contributed Talks}
 
 ``SMA Observations of AT2018cow: A Prototype for Millimeter Time-Domain Astronomy''
 \begin{itemize}
