--- a/cv_science.tex
+++ b/cv_science.tex
@@ -101,18 +101,10 @@ First Place, Dewitt Wallace Prize for Science Writing for the Public, MIT \hfill
 
 \begin{rSection}{Invited Talks}
 
-\begin{itemize}
-  \item
-    ``The Death Throes of a Stripped Massive Star'': Brown Bag Lunch, MIT, Cambridge, MA
-    \hfill {\em April 2019}
-  \item
-  ``Watching The Cow Shock Its Environment: The Millimeter-Wavelength Perspective'':
+2019 ``The Death Throes of a Stripped Massive Star'': Brown Bag Lunch, MIT, Cambridge, MA
+2019 ``Watching The Cow Shock Its Environment: The Millimeter-Wavelength Perspective'':
     Press Panel at the AAS Winter Meeting, Seattle, WA
-    \hfill {\em January 2019}
-  \item
-``\emph{The Cannon:} Data-Driven Spectral Modeling in the Era of Large Stellar Surveys'':
-  Gemini Observatory Workshop, La Serena, Chile \hfill {\em March 2016}
-\end{itemize}
+2016 ``\emph{The Cannon:} Data-Driven Spectral Modeling in the Era of Large Stellar Surveys'': Gemini Observatory Workshop, La Serena, Chile \hfill {\em March 2016}
 
 \end{rSection}
 
