pretty large-scale reformatting

--- a/cv_science.tex
+++ b/cv_science.tex
@@ -27,10 +27,15 @@
 \usepackage{hyperref}
 
 \name{Anna Y. Q. Ho} % Your name
-\address{ah@astro.caltech.edu} % Your phone number and email
-\address{Caltech, MC 249-17, 1200 E. California Blvd., Pasadena CA 91125}
+% \address{annayqho.github.io}
+% \address{Caltech, MC 249-17, 1200 E. California Blvd., Pasadena CA 91125}
 
 \begin{document}
+
+California Institute of Technology \hfill {\em Email:} \texttt{ah@astro.caltech.edu} \\
+MC 249-17 \hfill {\em Homepage:} \texttt{annayqho.github.io} \\
+1200 E. California Blvd. \\
+Pasadena CA 91125
 
 %------------------------------------------------------------------------------
 %	EDUCATION SECTION
@@ -38,20 +43,12 @@
 
 \begin{rSection}{Education}
 
-{\bf California Institute of Technology (Caltech)}, Pasadena CA
-\begin{itemize}
-\item Ph.D., Astrophysics, 
-  Advisor: Prof. Shri Kulkarni \hfill expected {\em June 2020} 
-\end{itemize}
-
-\begin{itemize}
-  \item M.S., Astrophysics \hfill {\em June 2017}
-\end{itemize}
-
-{\bf Massachusetts Institute of Technology (MIT)}, Cambridge MA
-\begin{itemize}
-\item B.S., Physics \hfill {\em June 2014} 
-\end{itemize}
+2016-Present \qquad PhD California Institute of Technology, Astrophysics \\
+\null \hspace{83pt} Thesis: 
+\emph{The Landscape of Engine-Driven Explosions} \\
+\null \hspace{83pt} Advisor: Prof. Shri Kulkarni \\
+2015 \hspace{58pt} M.S. California Institute of Technology, Astrophysics \\
+2014 \hspace{58pt} B.S. Massachusetts Institute of Technology, Physics \\
 
 \end{rSection}
 
@@ -72,26 +69,26 @@
 
 \begin{rSection}{Fellowships and Awards}
 
-\begin{itemize}
-\item
-NSF Graduate Research Fellowship \hfill {\em 2014-19}
-\item
-Affiliate, Keck Institute for Space Sciences (Division Award) \hfill {\em 2019}
-\item
-Garmire Prize, Caltech (Division Award) \hfill {\em 2017}
-\item
-Fulbright Scholarship \hfill {\em 2014-15}
-\item
-Ida M. Green Fellowship, MIT (Departmental Award) \hfill {\em 2014} 
-\item
-Ford Foundation Fellowship, Honorable Mention \hfill {\em 2014} 
-\item
-Karl Taylor Compton Prize, MIT (University Award) \hfill {\em 2014} 
-\item
-Chambliss Astronomy Achievement Student Awards, Honorable Mention \hfill {\em 2014}
-\item
-First Place, Dewitt Wallace Prize for Science Writing for the Public, MIT \hfill {\em 2013} 
-\end{itemize}
+2014-2019 \hspace{33pt} NSF Graduate Research Fellowship 
+\newline
+2017 \hspace{58pt} Affiliate, 
+Keck Institute for Space Sciences (Division Award) 
+\newline
+2017 \hspace{58pt} Garmire Prize, Caltech (Division Award) 
+\newline
+2014-2015 \hspace{33pt} Fulbright Scholarship 
+\newline
+2014 \hspace{58pt} Ida M. Green Fellowship, MIT (Departmental Award) 
+\newline
+2014 \hspace{58pt} Ford Foundation Fellowship, Honorable Mention 
+\newline
+2014 \hspace{58pt} Karl Taylor Compton Prize, MIT (University Award) 
+\newline
+2014 \hspace{58pt} Chambliss Astronomy Achievement Student Awards, 
+Honorable Mention 
+\newline
+2013 \hspace{58pt} First Place, 
+Dewitt Wallace Prize for Science Writing for the Public, MIT 
 
 \end{rSection}
 
@@ -101,117 +98,50 @@ First Place, Dewitt Wallace Prize for Science Writing for the Public, MIT \hfill
 
 \begin{rSection}{Invited Talks}
 
-2019 ``The Death Throes of a Stripped Massive Star'': Brown Bag Lunch, MIT, Cambridge, MA
-
-2019 ``Watching The Cow Shock Its Environment: The Millimeter-Wavelength Perspective'':
-    Press Panel at the AAS Winter Meeting, Seattle, WA
-
-2016 ``\emph{The Cannon:} Data-Driven Spectral Modeling in the Era of Large Stellar Surveys'': Gemini Observatory Workshop, La Serena, Chile \hfill {\em March 2016}
+2019 \hspace{58pt} Stars and Planets Seminar, Harvard-Smithsonian CfA, Cambridge, MA
+\newline
+2019 \hspace{58pt} SMA Seminar, Harvard-Smithsonian CfA, Cambridge, MA
+\newline
+2019 \hspace{58pt} Brown Bag Lunch, MIT, Cambridge, MA
+\newline
+2019 \hspace{58pt} UC Berkeley Department Lunch Talk, Berkeley, CA
+\newline
+2019 \hspace{58pt} Press Panel, AAS Winter Meeting, Seattle, WA
+\newline
+2016 \hspace{58pt} Gemini Observatory, La Serena, Chile 
 
 \end{rSection}
 
 
 \begin{rSection}{Contributed Talks}
 
-``SMA Observations of AT2018cow: A Prototype for Millimeter Time-Domain Astronomy''
-\begin{itemize}
-  \item
-    (Contributed) SMA Seminar, Harvard-Smithsonian CfA, Cambridge, MA
-    \hfill {\em April 2019}
-\end{itemize}
-
-``The Death Throes of a Stripped Massive Star''
-\begin{itemize}
-  \item
-    (Contributed) UC Berkeley Department Lunch Talk, Berkeley, CA
-    \hfill {\em April 2019}
-  \item
-    (Contributed) Stars and Planets Seminar, Harvard-Smithsonian CfA, Cambridge, MA
-    \hfill {\em April 2019}
-  \item
-    (Invited) Brown Bag Lunch, MIT, Cambridge, MA
-    \hfill {\em April 2019}
-  \item
-    (Contributed) STScI Spring Symposium, Baltimore, MD
-    \hfill {\em April 2019}
-\end{itemize}
-
-``Watching The Cow Shock Its Environment: The Millimeter-Wavelength Perspective''
-\begin{itemize}
-  \item
-    (Invited) Talk (Press Panel) at the AAS Winter Meeting, Seattle, WA
-    \hfill {\em January 2019}
-\end{itemize}
-
-``ZTF18abukavn (AT2018gep): a luminous, rapidly rising, high-velocity Ic-BL supernova''
-\begin{itemize}
-  \item
-    (Contributed) ZTF-Theory Network Meeting, KITP, Santa Barbara, CA
-    \hfill {\em December 2018}
-\end{itemize}
-
-``AT2018cow: a luminous millimeter transient''
-\begin{itemize}
-  \item
-    (Contributed) ZTF-Theory Network Meeting, KITP, Santa Barbara, CA
-    \hfill {\em July 2018}
-\end{itemize}
-
-``Dirty Fireballs and Orphan Afterglows: A Broader Landscape of Relativistic Explosions with ZTF''
-\begin{itemize}
-  \item
-    (Contributed) GROWTH Annual Meeting, Milwaukee, WI
-    \hfill {\em October 2017}
-\end{itemize}
-
-``\emph{The Cannon:} Data-Driven Spectral Modeling in the Era of Large Stellar Surveys''
-\begin{itemize}
-  \item
-    (Contributed) National Radio Astronomy Observatory Lunch Seminar 
-    \hfill {\em June 2016} \\
-    National Radio Astronomy Observatory, Socorro, NM
-  \item
-  (Invited) Gemini Observatory Workshop, La Serena, Chile \hfill {\em March 2016}
-\end{itemize}
-``Using \emph{The Cannon} to Exploit the Overlap Between Kepler \& APOGEE''
-\begin{itemize}
-  \item
-    (Contributed) Boutiques \& Experiments Conference, Caltech, Pasadena, CA \hfill {\em August 2015}
-\end{itemize}
-``Survey Cross-Calibration Using The Cannon: APOGEE Labels from LAMOST Spectra"
-\begin{itemize}
-\item
-(Contributed) SDSS-IV Collaboration Meeting \hfill {\em July 2015} \\
-Instituto de Física Teórica IFT UAM-CSIC, Madrid, Spain
-\item
-(Contributed) The Local Group Astrostatistics Conference \hfill {\em June 2015} \\
-University of Michigan, Ann Arbor, USA
-\end{itemize}
-
-``The Cannon: A New Data-Driven Method for Retrieving Stellar Parameters and Abundances"
-\begin{itemize}
-\item
-(Contributed) MPIA-AIP Milky Way \& Local Volume Meeting  \hfill {\em November 2014} \\
-Institute for Astrophysics Potsdam (AIP), Potsdam, Germany
-\end{itemize}
-
-``Rotation Measures of Globular Cluster Pulsars as a Unique Probe of the Galactic Magnetic Field"
-\begin{itemize}
-\item
-(Contributed) Max Planck Institute for Astronomy,
-Heidelberg, Germany \hfill {\em October 2014}
-\item
-(Contributed) National Radio Astronomy Observatory, 
-Charlottesville, VA \hfill {\em August 2013} 
-\end{itemize}
-
-
-``Studies of Millisecond Pulsars in the Globular Cluster Terzan 5" 
-\begin{itemize}
-\item
-(Contributed) National Radio Astronomy Observatory, 
-Charlottesville, VA \hfill {\em August 2012} 
-\end{itemize}
+2019 \hspace{58pt} STScI Spring Symposium, Baltimore, MD
+\newline
+2018 \hspace{58pt} ZTF-Theory Network Meeting, KITP, Santa Barbara, CA
+\newline
+2019 \hspace{58pt} ZTF-Theory Network Meeting, KITP, Santa Barbara, CA
+\newline
+2017 \hspace{58pt} GROWTH Annual Meeting, Milwaukee, WI
+\newline
+2016 \hspace{58pt} NRAO Lunch Seminar, Socorro, NM
+\newline
+2015 \hspace{58pt} Boutiques \& Experiments Conference, Caltech, Pasadena, CA 
+\newline
+2015 \hspace{58pt} SDSS-IV Collaboration Meeting, IFT UAM-CSIC, Madrid, Spain
+\newline
+2015 \hspace{58pt} The Local Group Astrostatistics Conference, U. Mich, 
+Ann Arbor, USA
+\newline
+2014 \hspace{58pt} MPIA-AIP Milky Way \& Local Volume Meeting,  
+AIP, Potsdam, Germany
+\newline
+2014 \hspace{58pt} Max Planck Institute for Astronomy, 
+Heidelberg, Germany \hfill
+\newline
+2013 \hspace{58pt} NRAO, Charlottesville, VA
+\newline
+2012 \hspace{58pt} NRAO, Charlottesville, VA
+\newline
 
 \end{rSection}
 
